Updated resource path
